bot invite link added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 <button data-view="features" class="nav-btn">Features</button>
                 <button data-view="docs" class="nav-btn">Docs</button>
                 <button data-view="api" class="nav-btn">API</button>
-                <a class="cta invite" href="#invite">Invite Bot</a>
+                <a class="cta invite"
+                    href="https://discord.com/oauth2/authorize?client_id=1460289617264775333&permissions=5629501681765440&scope=bot+applications.commands">Invite
+                    Bot</a>
             </nav>
         </div>
     </header>
